uploading heeader and upper middle sections for moblie

--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <span class="facebook">facebook
+
+            </span>
+        </nav>
+        <h1 class="title-text">connecting the world</h1>
+        <p class="title-body">A next-gen social networking service, empowering the user, making universal connectivity both uninstrusive and immersive.</p>
+    <div class="get-started"> <span>get started</span></div>
+    </header>
+    <!--upper middle start-->
+    <section class="upper-middle">
+        <section class="phone">
+        <img src="\Assets\phone-mockup.png" alt="phone image">
+    </section>
+    <h2>focused on <span> social </span> integrity</h2>
+    <p class="upper-middle-text">Avoiding the sharing functionality, you can focus on showcasing your best self without hesitation.</p>
+
+    </section>
+    <!--upper middle end-->
 </body>
 </html>
