adding lower middle seciton content css to be completed

--- a/index.html
+++ b/index.html
@@ -31,5 +31,29 @@
 
     </section>
     <!--upper middle end-->
+    <!--lower middle start-->
+    <section class="lower-middle">
+        <h2 class="lower-title">Say Hello to an Open platform</h2>
+        <div class="key-articles">
+            <article class="unity-title">
+                <h3 class="unityh3">unity</h3>
+                <p class="unity-text">Ensuring peace of mind for all our users, share only what you want. You are in full control of yourself with us.</p>
+
+            </article>
+            <article class="privacy-title">
+                <h3 class="privacyh3">privacy</h3>
+                <p class="privacy-text">With limitless privacy toggle functionality, we will only ever use your data to provide the best experience for you.</p>
+
+            </article>
+            <article class="clarity-title">
+                <h3 class="clarityh3">clarity</h3>
+                <p class="clarity-text">We will always notify you of any changes affecting you, and will never breach our promise of a clear, open network.</p>
+
+            </article>
+
+        </div>
+
+    </section>
+    <!--lower middle end-->
 </body>
 </html>
